# TouchstoneViewer

./: .gitignore  CMakeLists.txt  README.md
source/app/: CMakeLists.txt  main.cpp
source/app/qml/: Main.qml
source/core/: CMakeLists.txt  dataprocessor.cpp  dataprocessor.h  fileparser.cpp  fileparser.h  measurementdata.h
test/: CMakeLists.txt  hello_test.cpp
